
message CorrespondingServer
{
	required uint32 servertype	= 1;
	required uint32 serverid	= 2;
}

message HeaderEx
{
	optional uint64 uid			= 1;
	repeated CorrespondingServer servers	= 2;
}